# HairMSNN

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  README.md  model.cpp  render_hair_msnn.cu  render_nrc.cu  render_path_tracing.cu  scene.cpp
cuda/: hair_msnn.cu  neural_network.cu  nrc.cu  path_tracing.cu
cuda_headers/: common.cuh  curve_utils.cuh  disney_hair.cuh  frostbite_anisotropic.cuh  hair_msnn.cuh  lcg_random.cuh  neural_network.cuh  nrc.cuh  optix_common.cuh  path_tracing.cuh  utils.cuh
headers/: common.h  model.h  render_hair_msnn.h  render_nrc.h  render_path_tracing.h  scene.h
scenes/curly/: config.json  head.mtl  tcnn_hairmsnn.json
scenes/straight/: config.json  head.mtl
